<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="tip_percent">Percentage:</string>
    <string name="total_amount">Amount:</string>
    <string name="tip_result">Tip:</string>
    <string name="calculate_tip">Calculate</string>
    <string name="zero_start">$0.00</string>
    <string name="initial_amount">0.00</string>
    <string name="initial_percent">0</string>
    <string name="warning_text">WARNING:\nEnter Proper Number Values</string>
    <string name="parent_name">Tip Calculator</string>

</resources>
