<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".MainActivity"
    android:background="#000000"
    android:id="@+id/parent"
    android:orientation="vertical"
    android:showDividers="beginning|middle"
    android:paddingTop="2dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_amount"
        android:id="@+id/amountTextView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/amountText"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:focusable="false"
        android:enabled="false"
        android:layout_gravity="left|center_vertical"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/amountText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:width="300dp"
        android:layout_alignWithParentIfMissing="false"
        android:textSize="30sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:enabled="true"
        android:textColor="#ffffff"
        android:gravity="right"
        android:text="@string/initial_amount"
        android:selectAllOnFocus="true"
        android:clickable="false"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tip_percent"
        android:id="@+id/percentTextView"
        android:layout_below="@+id/amountText"
        android:layout_alignLeft="@+id/percentText"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:paddingTop="5dp"
        android:layout_gravity="left|center_vertical"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/percentText"
        android:width="300dp"
        android:layout_alignWithParentIfMissing="false"
        android:textSize="30sp"
        android:layout_below="@+id/percentTextView"
        android:layout_alignLeft="@+id/amountText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:enabled="true"
        android:textColor="#ffffff"
        android:gravity="right"
        android:text="@string/initial_percent"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal|numberSigned"
        android:clickable="false"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tip_result"
        android:id="@+id/resultTextView"
        android:layout_above="@+id/tipTextView"
        android:layout_alignLeft="@+id/tipTextView"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_gravity="left|center_vertical"
        android:paddingTop="5dp"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipTextView"
        android:autoText="false"
        android:background="#000000"
        android:width="300dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:height="75dp"
        android:textColor="#ffffff"
        android:text="@string/zero_start"
        android:textSize="60sp"
        android:singleLine="true"
        android:gravity="right"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/warningTextView"
        android:layout_below="@+id/calculateButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:width="300dp"
        android:height="45dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ff0000" />

</LinearLayout>
